--- a/src/styling/_home.scss
+++ b/src/styling/_home.scss
@@ -60,7 +60,7 @@
 }
 
 .home__trending-artist-item {
-	width: 150px;
+	width: 120px;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
